# dune-multidomain

./: .gitignore  CMakeLists.txt  COPYING.md  Makefile.am  README.GIT.md  README.md  RELEASE_NOTES.md  config.h.cmake  configure.ac  dune-multidomain.pc.in  dune.module
cmake/pkg/: Makefile.am
doc/: Makefile.am
doc/doxygen/: .gitignore  Doxylocal
dune/: Makefile.am
dune/multidomain/: Makefile.am  multidomain.hh
dune/pdelab/: Makefile.am
dune/pdelab/multidomain/: CMakeLists.txt  Makefile.am  constraints.hh  constraintsfunctors.hh  coupling.hh  couplinggfsordering.hh  couplinggridfunctionspace.hh  couplinglocalfunctionspace.hh  couplingutilities.hh  datahandleprovider.hh  datawrappers.hh  dofmapper.hh  entitywrappers.hh  globalassembler.hh  gridoperator.hh  instationarycoupling.hh  instationarymultidomaingridoperatorspace.hh  instationarysubproblem.hh  interpolate.hh  istlhelpers.hh  jacobianassemblerengine.hh  jacobianassemblerfunctors.hh  localassembler.hh  localfunctionspaceutility.hh  multidomaingridfunctionspace.hh  multidomaingridoperatorspace.hh  multidomaingridoperatorspaceinvocationhelpers.hh  multidomaingridoperatorspaceutilities.hh  multidomainlocalfunctionspace.hh  operatorapplier.hh  operatorcallguards.hh  operatorflagtests.hh  patternassemblerengine.hh  patternassemblerfunctors.hh  policy.hh  powercouplinggridfunctionspace.hh  residualassemblerengine.hh  residualassemblerfunctors.hh  subdomainset.hh  subproblem.hh  (+7 more)
m4/: CMakeLists.txt  Makefile.am  dune-multidomain.m4
src/: Makefile.am  dune_multidomain.cc
test/: .gitignore  CMakeLists.txt  Makefile.am  adrparam.hh  adrwip.hh  explicitlycoupledpoisson.cc  functionmacros.hh  gmsh3d.geo  gmsh3d.msh  gmshtest.msh  instationaryexplicitlycoupledpoisson.cc  instationarypoisson.cc  instationarypoissonoperator.hh  navierstokesdarcy-analytic-curved.ini  navierstokesdarcy-analytic-horizontal.ini  navierstokesdarcy-analytic-inclined.ini  navierstokesdarcy-analytic.cc  navierstokesdarcy-analytic.ini  neumanndirichletcoupling.hh  poisson-dirichlet-neumann.ini  poisson.cc  proportionalflowcoupling.hh  reactiondiffusion.cc  simpletimeoperator.hh  stokesdarcy-analytic-curved.geo  stokesdarcy-analytic-curved.msh  stokesdarcy-analytic-horizontal.geo  stokesdarcy-analytic-horizontal.msh  stokesdarcy-analytic-inclined.geo  stokesdarcy-analytic-inclined.msh  stokesdarcy-analytic-vertical.geo  stokesdarcy-analytic-vertical.msh  stokesdarcy.cc  stokesdarcy.geo  stokesdarcy.msh  stokesdarcy2-fine.geo  stokesdarcy2-fine.msh  stokesdarcy2.cc  stokesdarcy2.geo  stokesdarcy2.msh  (+20 more)
