install(FILES
  constraintsfunctors.hh
  constraints.hh
  couplinggfsordering.hh
  couplinggridfunctionspace.hh
  coupling.hh
  couplinglocalfunctionspace.hh
  couplingutilities.hh
  datahandleprovider.hh
  datawrappers.hh
  dofmapper.hh
  entitywrappers.hh
  globalassembler.hh
  gridoperator.hh
  interpolate.hh
  istlhelpers.hh
  jacobianassemblerengine.hh
  jacobianassemblerfunctors.hh
  localassembler.hh
  localfunctionspaceutility.hh
  multidomaingridfunctionspace.hh
  multidomainlocalfunctionspace.hh
  operatorcallguards.hh
  operatorflagtests.hh
  patternassemblerengine.hh
  patternassemblerfunctors.hh
  policy.hh
  powercouplinggridfunctionspace.hh
  residualassemblerengine.hh
  residualassemblerfunctors.hh
  subdomainset.hh
  subproblem.hh
  subproblemlocalfunctionspace.hh
  typemap.hh
  utility.hh
  visitor.hh
  vtk.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/pdelab/multidomain
)
